# MLOps-with-MNIST

./: .gitignore  Dockerfile  README.md  inference.py  load_registered_model.py  main.py  main_bentoml.py  main_fastapi.py  mlops_with_mnist.dockerfile  model.py  model_train.py  poetry 가상환경 세팅.txt  pyproject.toml  requirements.txt  save_mnist_images.py
ckpt/: model.pt  stat.npy
mlruns/0/: meta.yaml
mlruns/512588302806230482/: meta.yaml
mlruns/512588302806230482/f87bf7d24bee45d5b62c8f1c6ecfdcaa/: meta.yaml
mlruns/512588302806230482/f87bf7d24bee45d5b62c8f1c6ecfdcaa/metrics/: accuracy  test_loss  train_loss
mlruns/512588302806230482/f87bf7d24bee45d5b62c8f1c6ecfdcaa/tags/: mlflow.log-model.history  mlflow.runName
mlruns/565407947048062922/: meta.yaml
mlruns/565407947048062922/0e957c1cac2a46cda29586876a1e84b8/: meta.yaml
mlruns/565407947048062922/0e957c1cac2a46cda29586876a1e84b8/artifacts/: model_summary.txt
mlruns/565407947048062922/0e957c1cac2a46cda29586876a1e84b8/metrics/: accuracy  loss  test_accuracy  test_loss
mlruns/565407947048062922/0e957c1cac2a46cda29586876a1e84b8/tags/: mlflow.runName
mlruns/565407947048062922/7e9a781317b34fbabca0b14fb8be408d/: meta.yaml
mlruns/565407947048062922/c4cbaefae4974ce5962ae22fe861bc4f/: meta.yaml
mlruns/565407947048062922/e307d3aadd0f40c39cf3d874489edfa9/: meta.yaml
model_train/: dataloader.py  model.py  model_summary.txt  test.py  train.py  transform.py
models/: best.pth  last.pth
routers/: classifier.py
serving/: client.py  server.py
utils/: utils.py
(+32 files in other folders)
