[tool.poetry]
name = "mlops-with-mnist"
version = "0.1.0"
description = ""
authors = ["Gamchan Kang <104420634+gsgh3016@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.0"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
mlflow = "^2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
